Compare against coponent id when importing

We export the id not the displayName
BUG: 427188

(cherry picked from commit 0767688c0d5f4cb1e7df9a03fd80b6f18a1e031c)